# juce

./: .gitignore  bench.filtergraph  buildall_nix.sh  buildall_win.cmd
000_basic_template/: CMakeLists.txt  Common.h  PluginProcessor.cpp  PluginProcessor.h  Preset.h
021_saturacao/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
031_delay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
032_vibrato/: CMakeLists.txt  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
033_flanger/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
034_chorus/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
041_eq1band/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
042_eq4band/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
051_convreverb/: CMakeLists.txt  Common.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.h
052_ampsim/: CMakeLists.txt  IR.h  PluginProcessor.cpp  PluginProcessor.h
basic_template/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
fake_sidechain/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
